# act_ExportDownSampledResult

./: .gitignore  Makefile
utility.downsample/: .clang-format  CMakeLists.txt  README.md
utility.downsample/lib/: downsample.cpp
utility.testwrapper/: Program.cs  utility.wrappertest.csproj
utility.wrapper/: Downsample.cs
